--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <div class="forms-container">
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
-            <h2 class="title">Sign in</h2>
-            <h2>Sign in</h2><br><br>
+            <h2 class="title">Jamimo school</h2>
+            <h2 class="title">Sign in</h2><br><br>
             <div class="input-field">
               <i class="fas fa-user"></i>
               <input type="text" placeholder="Username" required />
