--- a/index.html
+++ b/index.html
@@ -61,7 +61,16 @@
               </a>
             </div>
           </form>
+          
           <form action="#" class="sign-up-form">
+                  <!-- ///////////////////////////////////////////////////////////////// -->
+                  <div class="typewriter">
+                    <div class="slide"><i></i></div>
+                    <div class="paper"></div>
+                    <div class="keyboard"></div>
+                </div>
+<!-- /////////////////////////////////////////////////////// -->
+            
             <h2 class="title">Send Request</h2>
             <a href="mailto:geofreyonyango167@gmail.com" class="submitt">Via an Email</a>
             <p class="social-text">social link or place a call</p>
