--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 
 </div>
 <!-- /////////////////////////////////////////////////////// -->
+Teachers 
             <h2 class="title"> &nbsp;&nbsp; Sign in</h2><br><br>
             
             <div class="input-field">
@@ -73,7 +74,7 @@
             
             <h2 class="title">Send Request</h2>
             <a href="mailto:geofreyonyango167@gmail.com" class="submitt">Via an Email</a>
-            <p class="social-text">social link or place a call</p>
+            <p class="social-text">Contact I.C.T chair Oduor</p>
             <div class="social-media">
               <a href="https://wa.me/qr/UYYWU5KSB4HCC1" class="social-icon">
                 <i class="fab fa-whatsapp"></i>
@@ -98,7 +99,7 @@
                   <circle class="back" cx="17" cy="17" r="14"></circle>
                   <circle class="front" cx="17" cy="17" r="14"></circle>
               </svg>
-              <div class="text" data-text="Locking connection"></div>
+              <div class="text" data-text="Checking your connection"></div>
           </div>
             <!-- searching ends//////////////////////////////////// -->
           </form>
