--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ Teachers
             
             <h2 class="title">Send Request</h2>
             <a href="mailto:geofreyonyango167@gmail.com" class="submitt">Via an Email</a>
-            <p class="social-text">Contact I.C.T chair Oduor</p>
+            <p class="social-text">Or</p>
             <div class="social-media">
               <a href="https://wa.me/qr/UYYWU5KSB4HCC1" class="social-icon">
                 <i class="fab fa-whatsapp"></i>
@@ -99,7 +99,7 @@ Teachers
                   <circle class="back" cx="17" cy="17" r="14"></circle>
                   <circle class="front" cx="17" cy="17" r="14"></circle>
               </svg>
-              <div class="text" data-text="Checking your connection"></div>
+              <div class="text" data-text="searching"></div>
           </div>
             <!-- searching ends//////////////////////////////////// -->
           </form>
