--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
                   
-            <h2 class="title">Jamilo school</h2>
+            <h2 class="title">Jamilo School</h2>
             <!-- ///////////////////////////////////////////////////////////////// -->
 <div class="containe">
   <div class="cloud front">
@@ -34,8 +34,8 @@
 
 </div>
 <!-- /////////////////////////////////////////////////////// -->
-Teachers 
-            <h2 class="title"> &nbsp;&nbsp; Sign in</h2><br><br>
+Teachers
+            <h2 class="title"> &nbsp;&nbsp;Sign in </h2><br><br> 
             
             <div class="input-field">
               <i class="fas fa-user"></i>
@@ -114,7 +114,7 @@ Teachers
              Request log in credentials
             </p>
             <button class="btn transparent" id="sign-up-btn">
-              Yes💫
+              Sign up
             </button>
           </div>
           <img src="img/log.svg" class="image" alt="" />
