--- a/index.html
+++ b/index.html
@@ -137,3 +137,4 @@ Teachers
     <script src="app.js"></script>
   </body>
 </html>
+<!-- For teachers who will find challenge in signing in kindly use the next dialog window so that i can get you through -->
