--- a/index.html
+++ b/index.html
@@ -114,9 +114,11 @@ Teachers
              Request log in credentials
             </p>
             <button class="btn transparent" id="sign-up-btn">
-              Sign up
+              Sign up 
+              <div class="loader"></div>
             </button>
           </div>
+         
           <img src="img/log.svg" class="image" alt="" />
         </div>
         <div class="panel right-panel">
