--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 </div>
 <!-- /////////////////////////////////////////////////////// -->
-Teachers
+<h3>Teachers</h3>
             <h2 class="title"> &nbsp;&nbsp;Sign in </h2><br><br> 
             
             <div class="input-field">
@@ -109,7 +109,7 @@ Teachers
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
-            <h3>🧑‍⚕️New here</h3>
+            🧑‍⚕️<h4>New here</h4>
             <p>
              Request log in credentials
             </p>
