--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" required />
+              <input type="text" placeholder="Username"  required />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
@@ -109,7 +109,7 @@
       <div class="panels-container">
         <div class="panel left-panel">
           <div class="content">
-            🧑‍⚕️<h4>New here</h4>
+           <h4> 🧑‍⚕️New here</h4>
             <p>
              Request log in credentials
             </p>
