--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="style.css" />
-    <title>Log in</title>
-    <link rel="shortcut icon" href="./img/logo.png" type="image/x-icon">
+    <title>Sign In</title>
+    <link rel="shortcut icon" href="./img/schoologo.png" type="image/x-icon">
   </head>
   <body> 
     <div class="container">
