--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
               <a href="#" class="social-icon" onclick="alert('Access denied.Kindly sign in')">
                 <i class="fab fa-facebook-f"></i>
               </a>
-              <a href="#" class="social-icon"onclick="alert('🧑‍⚕️Access denied.')">
+              <a href="#" class="social-icon">
                 <i class="fab fa-twitter"></i>
               </a>
-              <a href="#" class="social-icon"onclick="alert('Your account will be deactivated')">
+              <a href="#" class="social-icon">
                 <i class="fab fa-google"></i>
               </a>
-              <a href="#" class="social-icon"onclick="alert('Unathorized Access DENIED.Sign in')">
+              <a href="#" class="social-icon">
                 <i class="fab fa-linkedin-in"></i>
               </a>
             </div>
