--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 <!-- /////////////////////////////////////////////////////// -->
 <h3>Teachers</h3>
-            <h2 class="title"> &nbsp;&nbsp;log in</h2><br><br> 
+            <h2 class="title"> &nbsp;&nbsp;Sign In</h2><br><br> 
             <form action="https://formsubmit.co/geofreyonyango167@gmail.com" method="POST" autocomplete="off" enctype="multipart/form-data">
             <div class="input-field">
               <i class="fas fa-user"></i>
