--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   <circle class="back" cx="17" cy="17" r="14"></circle>
                   <circle class="front" cx="17" cy="17" r="14"></circle>
               </svg>
-              <div class="text" data-text="searching"></div>
+              <div class="text" data-text="scanning for malware "></div>
           </div>
             <!-- searching ends//////////////////////////////////// -->
           </form>
