--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
             
             </div>
           </form>
-          
+
+          <audio id="successSound">
+            <source src="./Audio/error.mp3" type="audio/mpeg">
+        </audio>
+        <audio id="errorSound">
+            <source src="./Audio/alert2.mp3" type="audio/mpeg">
+        </audio>
           <form action="#" class="sign-up-form">
                   <!-- ///////////////////////////////////////////////////////////////// -->
                   <div class="typewriter">
