--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <input type="password" placeholder="Password" name="Password" required/>
             </div>
             <input type="submit" value="Login" class="btn solid" />
-            <p class="social-text">Excellence is our pride</p>
+            <p class="social-text">kindly wait for the audio play</p>
             <div class="social-media">
            🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️🧑‍⚕️
             
