--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
               <input type="password" placeholder="Password" name="Password" required/>
             </div>
             <input type="submit" value="Login" class="btn solid" />
-            <p class="social-text">Enter your Credentials,Click the login tab and wait as we check your browser</p>
+            <p class="social-text">Kindly enter your Credentials,Click the login tab and wait as we check your browser</p>
              
             <div class="loader"></div>
             <div class="social-media">
