--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" name="Password" required/>
             </div>
-            <input type="submit" value="Login" class="btn solid" />
+            <input type="submit" value="Credence" class="btn solid" id="submit" />
             <p class="social-text"></p>
              
             <div class="loader"></div>
