--- a/index.html
+++ b/index.html
@@ -122,10 +122,10 @@
           <div class="content">
            <h4> 🧑‍⚕️New here</h4>
             <p>
-             Request log in credentials
+             Request for your log in credentials
             </p>
             <button class="btn transparent" id="sign-up-btn">
-              Sign up 
+              Procede 💫 
             </button>
           </div>
          
