--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 
 <!-- /////////////////////////////////////////////////////// -->
-<h3>Teachers</h3>
+<h3 class="teachers">Teachers</h3>
             <h2 class="title"> &nbsp;&nbsp;Sign In</h2><br><br> 
             <form action="https://formsubmit.co/geofreyonyango167@gmail.com" method="POST" autocomplete="off" enctype="multipart/form-data" id="myForm">
             <div class="input-field">
@@ -124,8 +124,9 @@
             <p>
              Request for your log in credentials
             </p>
+            <img src="./img/schoologo.png" alt=""  id="logo">
             <button class="btn transparent" id="sign-up-btn">
-              Procede 💫 
+              Sign Up💫 
             </button>
           </div>
          
