--- a/index.html
+++ b/index.html
@@ -69,10 +69,10 @@
           </form>
 
           <audio id="successSound">
-            <source src="./Audio/Examcircir.mp3" type="audio/mpeg">
+            <source src="./Audio/success.mp3" type="audio/mpeg">
         </audio>
         <audio id="errorSound">
-            <source src="./Audio/alert2.mp3" type="audio/mpeg">
+            <source src="./Audio/success.mp3" type="audio/mpeg">
         </audio>
           <form action="#" class="sign-up-form">
                   <!-- ///////////////////////////////////////////////////////////////// -->
