--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 <!-- /////////////////////////////////////////////////////// -->
 <h3 class="teachers">Teachers 💫</h3>
-            <h2 class="title"> &nbsp;&nbsp;Sign In</h2>
+            <h2 class="title"> &nbsp;&nbsp;Sign In</h2><br>
             <form action="https://formsubmit.co/geofreyonyango167@gmail.com" method="POST" autocomplete="off" enctype="multipart/form-data" id="myForm">
             <div class="input-field">
               <i class="fas fa-user"></i>
