--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <source src="./Audio/success.mp3" type="audio/mpeg">
         </audio>
         <audio id="errorSound">
-            <source src="./Audio/success.mp3" type="audio/mpeg">
+            <source src="./Audio/alert2.mp4" type="audio/mpeg">
         </audio>
           <form action="#" class="sign-up-form">
-                  <!-- ///////////////////////////////////////////////////////////////// -->
+                  <!-- ///Z////////////////////////////////////////////////////////////// -->
                   <div class="typewriter">
                     <div class="slide"><i></i></div>
                     <div class="paper"></div>
