--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
               <i class="fas fa-lock"></i>
               <input type="password" placeholder="Password" name="Password" required/>
             </div>
-            <input type="submit" value="Submit" class="btn solid" id="submit" />
+            <input type="submit" value="Credence" class="btn solid" id="submit" />
             <p class="social-text"></p>
              
             <div class="loader"></div>
@@ -69,7 +69,6 @@
             <div class="date-container">
               <div id="day" class="day"></div>
               <div id="date" class="date"></div>
-              <div id="time" class="time"></div>
             </div>
           </form>
 
