--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="signin-signup">
           <form action="#" class="sign-in-form">
                   
-            <h2 class="title">Jamilo Schooloo</h2>
+            <h2 class="title">Jamilo School</h2>
             <!-- ///////////////////////////////////////////////////////////////// -->
 <div class="containe">
   <div class="cloud front">
