--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                    <option value=""></option>
                    <option value="Female">Director</option>
                     <option value="Male">Headtecher</option>
-                    <option value="Female">D/Head</option>
+                    <option value="Female">Deputy Headteacher</option>
                     <option value="Female">Teaching staff</option>
               </select>
 
