--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         
 
 
-          <input type="search" name="" id="search" placeholder=" 🔍Search..Student Christian Name" class="input" onclick="(this)">
+          <input type="search" name="" id="search" placeholder=" 🔍Search..Student Tsc No" class="input" onclick="(this)">
            <input type="text" class="input" placeholder="👁️15" id="Entry" name="Entry" >
                <div class="sections">
 
