--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         
         <div class="hero">
             <form name="submit-to-google-sheet" class="form">
-                <p id="title" >Jamilo Comprehensive school <br> Sign In</b ></p><br><br> <br>
+                <p id="title" >Jamilo Comprehensive <br>school <br>Staff Sign In</b ></p><br><br> <br>
            <p class="formsectionA">🧑‍⚕️ Online: Service</p>
           <!-- <img src="./Pdf/slip 2023/Jason james.pdf" > -->
         
