--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="hero">
             <form name="submit-to-google-sheet" class="form">
                 <p id="title" >Jamilo Comprehensive <br>school <br>Staff Sign In</b ></p><br><br> <br>
-           <p class="formsectionA">🧑‍⚕️ Online: Service</p>
+           <p class="formsectionA">🧑‍⚕️ Online: Services</p>
           <!-- <img src="./Pdf/slip 2023/Jason james.pdf" > -->
         
 
