--- a/index.html
+++ b/index.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admissions ...</title>
+    <title>Jamilo school</title>
     <link rel="stylesheet" href="style.css">
        <!-- Add SweetAlert2 CSS and JavaScript -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.css">
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.all.min.js"></script>
 </head>
-<body oncontextmenu="return true;">
+<body oncontextmenu="return false;">
  
   
     <div class="container">
