--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         
         <div class="hero">
             <form name="submit-to-google-sheet" class="form">
-                <p id="title" >Jamilo Comprehensive school <br>Staff Sign In</b ></p><br><br> <br>
+                <p id="title" >Jamilo Comprehensive <br> school <br>Staff Sign In</b ></p><br><br> <br>
            <p class="formsectionA">🧑‍⚕️ Online: Services</p>
           <!-- <img src="./Pdf/slip 2023/Jason james.pdf" > -->
         
@@ -37,7 +37,7 @@
                     </div> -->
 
                     <div class="sub">
-                        <label for=""> ⬆️Title 💫</label>
+                        <label for=""> Epithet💫</label>
                       <select name="Gender" id="" class="input" >
                            <option value="">Select</option>
                            <option value="Female">Director</option>
@@ -45,6 +45,11 @@
                             <option value="Female">Deputy Headteacher</option>
                             <option value="Female">Teaching staff</option>
                       </select>
+                        </div>
+
+                        <div class="sub">
+                            <label for="">Username </label>
+                            <input type="text"  name="Username" class="input">
                         </div>
 
                         <div class="sub">
