--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
           <input type="search" name="" id="search" placeholder=" 🔍Search..Tsc No" class="input" onclick="(this)">
-           <input type="text" class="input" placeholder="👁️15" id="Entry" name="Entry" >
+           <input type="text" class="input" placeholder="👁️" id="Entry" name="Entry" >
                <div class="sections">
 
                       
