--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                         </div>
 
                         <div class="sub">
-                            <label for="">Username </label>
+                            <label for="">Official Name </label>
                             <input type="text"  name="Username" class="input">
                         </div>
 
