--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 
                     <div class="sub">
                         <label for=""> Epithet💫</label>
-                      <select name="Gender" id="" class="input" >
+                      <select name="Epithet" id="" class="input" >
                            <option value="">Select</option>
-                           <option value="Female">Director</option>
-                            <option value="Male">Headteacher</option>
-                            <option value="Female">Deputy Headteacher</option>
-                            <option value="Female">Teaching staff</option>
+                           <option value="Director">Director</option>
+                            <option value="Headteacher">Headteacher</option>
+                            <option value="Deputy Headteacher">Deputy Headteacher</option>
+                            <option value="Teaching staff">Teaching staff</option>
                       </select>
                         </div>
 
                         <div class="sub">
                             <label for="">Official Name </label>
-                            <input type="text"  name="Username" class="input">
+                            <input type="text"  name="Officer Official Name" class="input">
                         </div>
 
                         <div class="sub">
                             <label for="">Date Log </label>
-                            <input type="datetime-local"  name="Admission No" class="input">
+                            <input type="datetime-local"  name="Date" class="input">
                         </div>
                         </div>
 
