--- a/index.html
+++ b/index.html
@@ -78,6 +78,6 @@
     </div>
      <script src="PasswordOff.js"></script> 
 
-      <script src="app2PasswordOff.js"></script>
+      <script src="app.js"></script>
 </body>
 </html>
