--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                     <div class="sub">
                         <label for=""> Designation💫</label>
-                      <select name="Epithet" id="" class="input" >
+                      <select name="Epithet" id="" class="input"  required>
                            <option value="">🧑‍⚕️Select</option>
                            <option value="Director">Director</option>
                             <option value="Headteacher">Headteacher</option>
@@ -43,12 +43,12 @@
 
                         <div class="sub">
                             <label for="">Official Name </label>
-                            <input type="text"  name="Officer Official Name" placeholder="🧑‍⚕️Enter your oficial name" class="input">
+                            <input type="text"  name="Officer Official Name" placeholder="🧑‍⚕️Enter your oficial name" class="input" required>
                         </div>
 
                         <div class="sub">
                             <label for="">Date Log </label>
-                            <input type="datetime-local"  name="Date" class="input">
+                            <input type="datetime-local"  name="Date" class="input" required>
                         </div>
                         </div>
 
