--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
                         </div>
 
                         <div class="sub">
-                            <label for="">Official Name </label>
-                            <input type="text"  name="Officer Official Name" placeholder="🧑‍⚕️Enter your oficial name" class="input" required>
+                            <label for="">Username</label>
+                            <input type="text"  name="Officer Official Name" placeholder="🧑‍⚕️Enter username" class="input" required>
                         </div>
 
                         <div class="sub">
@@ -58,7 +58,7 @@
                     <input type="submit" value="Submit" class="input submit">
             </div>
                 <p class="forgotten">All rights reserved &copy;2024 <br><a href="./Pdf/2023-KCPE-Timetable-04.05.pdf">Get help</a></p>
-                <div class="or">Excellence Our Pride</div>
+                <div class="or">Credence</div>
                 <div class="input btn" id="Thanks">"Welcome"</div>
                   <!-- Table to display registered learners' data -->
     
