--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
                     <div class="sub">
                         <label for=""> Designation💫</label>
-                      <select name="Epithet" id="" class="input"  required>
+                      <select name="Designation" id="" class="input"  required>
                            <option value="">🧑‍⚕️Select</option>
                            <option value="Director">Director</option>
                             <option value="Headteacher">Headteacher</option>
@@ -43,7 +43,7 @@
 
                         <div class="sub">
                             <label for="">Username</label>
-                            <input type="text"  name="Officer Official Name" placeholder="🧑‍⚕️Enter username" class="input" required>
+                            <input type="text"  name="Username" placeholder="🧑‍⚕️Enter username" class="input" required>
                         </div>
 
                         <div class="sub">
